@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Attach a listing photo
class ListingPhoto <<planned>> {
  +Guid ListingId
  +Guid CongregationId
  +byte[] CanonicalBytes
  +byte[] BoardBytes
  +byte[] DetailBytes
  +string ContentType
  +int Width
  +int Height
}
interface IImageProcessor <<planned>> {
  +Process(input: Stream): Task<ProcessedImage>
}
class AttachListingPhotoCommandHandler <<planned>> {
  +Handle(command: AttachListingPhotoCommand): Task<ListingPhotoDto>
}
class Listing {
  +Guid Id
  +ListingKind Kind
}
AttachListingPhotoCommandHandler --> IImageProcessor : validates and re-encodes
AttachListingPhotoCommandHandler ..> ListingPhoto : replaces atomically
Listing "1" *-- "0..1" ListingPhoto : goods-only attachment
@enduml
